--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,3 +32,8 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run tests
       run: bundle exec rspec
+      env:
+        DD_CIVISIBILITY_AGENTLESS_ENABLED: 'true'
+        DD_API_KEY: ${{ secrets.DD_API_KEY }}
+        DD_SITE: 'us5.datadoghq.com
+
