--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -36,9 +36,8 @@ jobs:
          DD_CIVISIBILITY_AGENTLESS_ENABLED=true
          DD_API_KEY=${{ secrets.DD_API_KEY }}
          DD_SITE=us5.datadoghq.com
-         DD_ENV=ci bundle exec rake test
+         DD_ENV='ci bundle exec rake test'
       env:
         DD_CIVISIBILITY_AGENTLESS_ENABLED: 'true'
         DD_API_KEY: ${{ secrets.DD_API_KEY }}
         DD_SITE: 'us5.datadoghq.com
-
