--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -30,6 +30,18 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+    - name: Check for Gemfile.lock updates
+      run: |
+        bundle install
+        git config --global user.email "you@example.com"
+        git config --global user.name "Your Name"
+        if ! git diff --exit-code Gemfile.lock; then
+          git add Gemfile.lock
+          git commit -m "Update Gemfile.lock"
+          git push
+        fi
+        
     - name: Run tests
       env:
         DD_CIVISIBILITY_AGENTLESS_ENABLED: 'true'
